--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node_mongo_server",
   "version": "1.0.0",
   "description": "This project is for learning mongo and node",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rushabh",
