--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
+    "morgan": "^1.10.0",
     "mongoose": "^6.0.2"
   }
 }
